<?xml version="1.0"?>
<package>
  <name>stikklar_control</name>
  <version>0.0.0</version>
  <description>The stikklar_control package</description>

  <maintainer email="freyr.magnusson@gmail.com">Freyr Magnusson</maintainer>
  <license>MIT</license>
  <author email="freyr.magnusson@gmail.com">Freyr Magnusson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>

</package>